
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## Unreleased

### Added

- `PartialOrd`/`Ord` impls for `v4::DhcpOption`/`v6::DhcpOption`/`v4::OptionCode`/`v6::OptionCode`
- `v6::DhcpOptions` methods `*_all`
- `v6::Duid` & methods
- `v6::Message` `Display` impl

### Changed

- internally, v6 DhcpOptions are now kept sorted by OptionCode (may become `HashMap<_, Vec<_>>` in future)

### Fixed

- relay agent info will be added before END opt if present [see here](https://datatracker.ietf.org/doc/html/rfc3046#section-2.1)

## [0.8.0]

### Changed

- dhcpv4 option variants added (breaking)
- dhcpv4 message type variants added (breaking)
- ClientNetworkInterface removed inner tuple
- Change `has_msg_type` return type to just `bool`

### Fixed

- v6 `set_xid_num` was taking bytes from the wrong end
- dhcpv6 DomainSearchList (opt 24)

### Added

- dhcpv4 opt 119 DomainSearch
- dhcpv4 opt 114 CaptivePortal
- dhcpv4 message variants 9-18 added, breaking change for `MessageType`
- dhcpv4 added DhcpOption for 91/92/93/94/97
- UnknownOption encode/decode
- dhcpv4 options 151-157 from bulkleasequery RFC
- add `Display` impl for `v4::Message`

## [0.7.0]

### Added

- **breaking** DHCP Inform message variant

### Changed

- bug in `set_chaddr` where `hlen` was not set

## [0.6.0]

### Added

- methods for `dhcpv6::UnknownOption` & `RelayMsg`

### Changed

- exposed some dhcpv6 opt fields as `pub`
- `InterfaceId` type changed from `String` to `Vec<u8>`
- `VendorClass`/`UserClass` changed to `Vec<Vec<u8>>`

### Removed

- `ElapsedTime` and `Preference`

## [0.5.0]

### Added

- added `clear`/`is_empty`/`retain` to v4 opts & relay agent sub-opts

### Fixed

- **breaking** options enum for `v4::DhcpOption` was decoding into the wrong variants for a few types

## [0.4.1]

### Added

- expose methods so one can actually create RelayInfo/RelayAgentInformation